--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <meta property="og:image" content="img/bigduck.webp" />
   <meta property="og:image:width" content="300" />
   <meta property="og:image:height" content="300" />
-  <meta property="og:image:alt" content="Docling Open Graph Image" />
+  <meta property="og:image:alt" content="A Docling leaning against a stack of document formats" />
 </head>
 
 <body onload="load()">
