--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.11.1/build/highlight.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.11.1/build/languages/python.min.js"></script>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MP75NXFDH4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-MP75NXFDH4');
+  </script>
+
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="img/logo.svg" />
   <script src="index.js"></script>
