--- a/public/discord/index.html
+++ b/public/discord/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="style.css" />
+
   <script type="module">
     const response = await fetch(
       "https://discord.com/api/guilds/1399788921306746971/widget.json",
@@ -14,5 +16,13 @@
     }
   </script>
 </head>
+
+<body>
+  <main>
+    <dialog open>
+      Inviting you to Discord...
+    </dialog>
+  </main>
+</body>
 
 </html>
