--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="Docling" />
   <meta property="og:description"
     content="Docling converts messy documents into structured data and simplifies downstream document and AI processing by detecting tables, formulas, reading order, OCR, and much more." />
-  <meta property="og:image" content="img/bigduck.webp" />
+  <meta property="og:image" content="https://www.docling.ai/img/bigduck.webp" />
   <meta property="og:image:width" content="300" />
   <meta property="og:image:height" content="300" />
   <meta property="og:image:alt" content="A Docling leaning against a stack of document formats" />
@@ -76,12 +76,13 @@
       <div class="group">
         Find us at
         <div>
-          <a href="discord">Discord</a>
           <a href="https://docling-project.github.io/docling">GitHub</a>
+          <a href="https://huggingface.co/docling-project">HuggingFace</a>
         </div>
         <div>
+          <a href="discord">Discord</a>
           <a href="https://linkedin.com/company/docling">LinkedIn</a>
-          <a href="https://huggingface.co/docling-project">HuggingFace</a>
+          <a href="https://www.youtube.com/playlist?list=PLt0drfpBaTa1ywCtPwJGLYg-t0UmxhQP4">YouTube</a>
         </div>
       </div>
     </article>
