--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,9 @@
   <meta property="og:title" content="Docling" />
   <meta property="og:description"
     content="Docling converts messy documents into structured data and simplifies downstream document and AI processing by detecting tables, formulas, reading order, OCR, and much more." />
-  <meta property="og:image" content="https://www.docling.ai/img/bigduck.webp" />
-  <meta property="og:image:width" content="300" />
-  <meta property="og:image:height" content="300" />
-  <meta property="og:image:alt" content="A Docling leaning against a stack of document formats" />
+  <meta property="og:image" content="https://www.docling.ai/img/og.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="675" />
 </head>
 
 <body onload="load()">
